--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,6 +25,8 @@
 </div>
 
 <script>
+  const API_BASE = "https://quiz-app-fullstack-76zm.onrender.com";
+
 async function login(){
   const u = document.getElementById("user").value.trim();
   const p = document.getElementById("pass").value.trim();
