--- a/frontend/register.html
+++ b/frontend/register.html
@@ -27,6 +27,7 @@
 </div>
 
 <script>
+  const API_BASE = "https://quiz-app-fullstack-76zm.onrender.com";
 async function register(){
   const name = document.getElementById('name').value.trim();
   const email = document.getElementById('email').value.trim();
