--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -19,6 +19,7 @@
   </table>
 
 <script>
+  const API_BASE = "https://quiz-app-fullstack-76zm.onrender.com";
 async function loadResults(){
   const token = localStorage.getItem('token');
   const res = await fetch('/api/results', {
