--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -19,7 +19,8 @@
   </table>
 
 <script>
-  const API_BASE = "https://quiz-app-fullstack-76zm.onrender.com";
+  const API_BASE = "https://quiz-backend-yloo.onrender.com";
+
 async function loadResults(){
   const token = localStorage.getItem('token');
   const res = await fetch('/api/results', {
