--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
 </div>
 
 <script>
-  const API_BASE = "https://quiz-app-fullstack-76zm.onrender.com";
+  const API_BASE = "https://quiz-backend-yloo.onrender.com";
 
 async function login(){
   const u = document.getElementById("user").value.trim();
