--- a/frontend/register.html
+++ b/frontend/register.html
@@ -27,7 +27,8 @@
 </div>
 
 <script>
-  const API_BASE = "https://quiz-app-fullstack-76zm.onrender.com";
+  const API_BASE = "https://quiz-backend-yloo.onrender.com";
+
 async function register(){
   const name = document.getElementById('name').value.trim();
   const email = document.getElementById('email').value.trim();
