--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,55 +1,71 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <title>Register</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <style>
-    body {font-family: Arial; background:#f5f5f5; text-align:center; padding-top:40px;}
-    #box { width:420px; margin:auto; padding:20px; background:white;
-      border-radius:10px; box-shadow:0 0 10px #aaa; }
-    input, button { width:92%; padding:10px; margin:8px 0; border-radius:6px; border:1px solid #999; }
-    .muted { font-size:0.9rem; color:#555; }
-    a { color:#0f69ff; text-decoration:none; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Register</title>
 </head>
 <body>
 
-<div id="box">
-  <h2>Create Student Account</h2>
-  <input id="name" placeholder="Full Name"/>
-  <input id="email" placeholder="Email"/>
-  <input id="username" placeholder="Username"/>
-  <input id="password" type="password" placeholder="Password"/>
-  <button onclick="register()">Register</button>
-  <p id="msg" class="muted"></p>
-  <p class="muted">Already registered? <a href="/index.html">Login here</a></p>
-</div>
+<h2>Register</h2>
+
+<input id="name" placeholder="Full Name"><br>
+<input id="email" placeholder="Email"><br>
+<input id="username" placeholder="Username"><br>
+<input id="password" type="password" placeholder="Password"><br><br>
+
+<button id="regBtn">Register</button>
+<p id="msg" style="color:red;"></p>
+
+<a href="index.html">Already registered? Login</a>
 
 <script>
-  const API_BASE = "https://quiz-backend-yloo.onrender.com";
+const API_BASE = "https://quiz-backend-yloo.onrender.com";
 
-async function register(){
-  const name = document.getElementById('name').value.trim();
-  const email = document.getElementById('email').value.trim();
-  const username = document.getElementById('username').value.trim();
-  const password = document.getElementById('password').value.trim();
-  const msg = document.getElementById('msg');
-  msg.style.color = '#333';
-  if(!name || !email || !username || !password){ msg.style.color='red'; msg.innerText = 'Please fill all fields'; return; }
-  const payload = { name, email, username, password };
-  const res = await fetch('/api/register', { method:'POST', headers:{'Content-Type':'application/json'}, body: JSON.stringify(payload) });
-  const data = await res.json();
-  if(res.ok){
-    msg.style.color = 'green';
-    msg.innerText = 'Registered successfully. Redirecting to login...';
-    setTimeout(()=> window.location = '/index.html', 1500);
-  } else {
-    msg.style.color = 'red';
-    msg.innerText = data.error || 'Registration failed';
-  }
+document.getElementById("regBtn").addEventListener("click", register);
+
+async function register() {
+    const full = document.getElementById("name").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const user = document.getElementById("username").value.trim();
+    const pass = document.getElementById("password").value.trim();
+    const msg = document.getElementById("msg");
+
+    msg.textContent = "";
+
+    if (!full || !email || !user || !pass) {
+        msg.textContent = "Please fill all fields.";
+        return;
+    }
+
+    try {
+        const res = await fetch(API_BASE + "/api/register", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ name: full, email, username: user, password: pass })
+        });
+
+        let data = await res.json().catch(async () => {
+            console.log("Non-JSON:", await res.text());
+            msg.textContent = "Server error.";
+        });
+
+        if (!res.ok) {
+            msg.textContent = data.error || "Registration failed.";
+            return;
+        }
+
+        msg.style.color = "green";
+        msg.textContent = "Registered successfully! Redirecting...";
+
+        setTimeout(() => {
+            window.location.href = "index.html";
+        }, 1200);
+
+    } catch (err) {
+        console.error(err);
+        msg.textContent = "Network error.";
+    }
 }
 </script>
-
 </body>
 </html>
