--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,52 +1,67 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <style>
-    body {font-family: Arial; background:#f5f5f5; text-align:center; padding-top:40px;}
-    #box { width:360px; margin:auto; padding:20px; background:white;
-      border-radius:10px; box-shadow:0 0 10px #aaa; }
-    input, button { width:90%; padding:10px; margin:8px 0; border-radius:6px; border:1px solid #999; }
-    a { color:#0f69ff; text-decoration:none; }
-  </style>
+    <meta charset="UTF-8">
+    <title>Login</title>
 </head>
 <body>
+    <h2>Login</h2>
 
-<div id="box">
-  <h2>Login</h2>
-  <input id="user" placeholder="Username"/>
-  <input id="pass" type="password" placeholder="Password"/>
-  <button onclick="login()">Login</button>
-  <p style="color:red" id="msg"></p>
-  <p style="font-size:0.9rem">Don't have an account? <a href="/register.html">Register here</a></p>
-  <p style="font-size:0.85rem; margin-top:8px;">Admin: <b>admin / admin123</b></p>
-</div>
+    <input id="username" placeholder="Username"><br>
+    <input id="password" type="password" placeholder="Password"><br><br>
+
+    <button id="loginBtn">Login</button>
+    <p id="msg" style="color:red;"></p>
+    <a href="register.html">Don't have an account? Register</a>
 
 <script>
-  const API_BASE = "https://quiz-backend-yloo.onrender.com";
+const API_BASE = "https://quiz-backend-yloo.onrender.com";
 
-async function login(){
-  const u = document.getElementById("user").value.trim();
-  const p = document.getElementById("pass").value.trim();
-  if(!u || !p){ document.getElementById('msg').innerText = 'Enter username and password'; return; }
-  const res = await fetch('/api/login', {
-    method: 'POST',
-    headers: {'Content-Type':'application/json'},
-    body: JSON.stringify({username: u, password: p})
-  });
-  const data = await res.json();
-  if(res.ok){
-    localStorage.setItem('token', data.token);
-    localStorage.setItem('user', u);
-    if(data.role === 'admin') window.location = '/admin.html';
-    else window.location = '/quiz.html';
-  } else {
-    document.getElementById("msg").innerText = data.error || 'Login failed';
-  }
+document.getElementById("loginBtn").addEventListener("click", login);
+
+async function login() {
+    const user = document.getElementById("username").value.trim();
+    const pass = document.getElementById("password").value.trim();
+    const msg = document.getElementById("msg");
+    msg.textContent = "";
+
+    if (!user || !pass) {
+        msg.textContent = "Enter username and password.";
+        return;
+    }
+
+    try {
+        const res = await fetch(API_BASE + "/api/login", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ username: user, password: pass })
+        });
+
+        let data = await res.json().catch(async () => {
+            console.log("Non-JSON response:", await res.text());
+            msg.textContent = "Server error. Try again.";
+        });
+
+        if (!res.ok) {
+            msg.textContent = data.error || "Login failed.";
+            return;
+        }
+
+        // Success
+        localStorage.setItem("token", data.token);
+        localStorage.setItem("user", user);
+
+        if (data.role === "admin") {
+            window.location.href = "admin.html";
+        } else {
+            window.location.href = "quiz.html";
+        }
+
+    } catch (err) {
+        console.error(err);
+        msg.textContent = "Network error.";
+    }
 }
 </script>
-
 </body>
 </html>
